--- a/package.json
+++ b/package.json
@@ -13,10 +13,8 @@
 		"packages/*"
 	],
 	"scripts": {
-		"deploy": "yarn --cwd client build && mv ./client/build ./server/build",
-		"start": "concurrently \"npm run client\" \"npm run server\"",
-    "server": "cd server && nodemon server.js",
-    "client": "cd client && npm start",
+		"deploy-prep": "yarn --cwd client build && mv ./client/build ./server/build",
+		"start": "yarn --cwd server start",
 		"start-server-dev": "yarn --cwd server dev",
 		"start-client-dev": "yarn --cwd client start",
 		"dev": "concurrently --kill-others --handle-input -n client,server 'npm:start-client-dev' 'npm:start-server-dev'"
