--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "method-override": "^3.0.0",
     "mongoose": "^6.2.0"
   }
 }
