--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
 	},
 	"devDependencies": {
 		"concurrently": "^6.5.1"
+	},
+	"dependencies": {
+		"axios": "^0.25.0",
+		"dotenv": "^16.0.0"
 	}
 }
